<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnu_search"
        android:orderInCategory="100"
        android:title="@string/mnu_search"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mnu_search_from_mirror"
        android:orderInCategory="100"
        android:title="@string/mnu_search_from_mirror"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mnu_showInstalledApp"
        android:orderInCategory="100"
        android:title="@string/mnu_showInstalledApps"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mnu_setSdPath"
        android:orderInCategory="100"
        android:title="@string/mnu_setSdPath"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mnu_sortBy"
        android:orderInCategory="100"
        android:title="@string/mnu_sortBy"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mnu_specialThanks"
        android:orderInCategory="100"
        android:title="@string/mnu_specialThanks"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mnu_license"
        android:orderInCategory="100"
        android:title="@string/mnu_license"
        app:showAsAction="never"/>

    <item
        android:id="@+id/mnu_donation"
        android:orderInCategory="100"
        android:title="@string/mnu_donation"
        app:showAsAction="never"/>
</menu>