<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:minHeight="115dp"
    android:paddingLeft="10dp" >

    <LinearLayout
        android:id="@+id/sort_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/sort_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/mnu_sortBy"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/sortGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp">

            <RadioButton
                android:id="@+id/alphabetAsc"
                android:layout_marginBottom="10dp"
                android:text="@string/alphabetAsc"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <RadioButton
                android:id="@+id/alphabetDesc"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/alphabetDesc" />

            <RadioButton
                android:id="@+id/firstInstallTime"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/firstInstallTime" />

            <RadioButton
                android:id="@+id/lastInstallTime"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/lastInstallTime" />
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>