<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.sarangnamu.apk_extractor.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:id="@+id/main_title_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/dBg">

        <net.sarangnamu.common.RobotoLightTextView
            android:id="@+id/main_title"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

        <net.sarangnamu.common.RobotoLightTextView
            android:id="@+id/main_tv_search"
            style="@style/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/mnu_search"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/main_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="60dp"
            android:layout_toRightOf="@id/main_tv_search"
            android:background="#ffffff"
            android:ems="10"
            android:hint=""
            android:singleLine="true"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/main_menu"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_bgcolor_selector"
            android:src="@drawable/icon_menu"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#d9d9d9">

        <ProgressBar
            android:id="@+id/main_progress"
            style="@style/tallerBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxHeight="20dp"
            android:minHeight="20dp"
            android:visibility="gone"/>

        <net.sarangnamu.common.RobotoLightTextView
            android:id="@+id/main_dev"
            style="@style/path"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:gravity="center_vertical"
            android:text="@string/dev"/>

        <net.sarangnamu.common.RobotoLightTextView
            android:id="@+id/main_path"
            style="@style/path"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginRight="4dp"
            android:gravity="right|center_vertical"
            android:maxWidth="260dp"
            android:singleLine="true"/>

    </FrameLayout>

    <net.sarangnamu.common.ui.list.AniBtnListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:drawSelectorOnTop="false"
        />

    <net.sarangnamu.common.RobotoLightTextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center|center_vertical"
        android:gravity="center|center_vertical"
        android:singleLine="true"
        android:text="@string/emptyList"/>
</LinearLayout>
